Add visitor counter with Pages KV binding

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <a class="tab" href="work.html">work</a>
         <a class="tab" href="guest.html">guest</a>
       </nav>
-      <div class="status status--hidden">today 021 / total 10,248</div>
+      <div class="status status--hidden">
+        <span data-visit-today>today --</span> / <span data-visit-total>total --</span>
+      </div>
     </header>
 
     <main class="layout">
@@ -146,8 +148,8 @@
           </li>
         </ul>
         <div class="visit-line">
-          <span>today 021</span>
-          <span>total 10,248</span>
+          <span data-visit-today>today --</span>
+          <span data-visit-total>total --</span>
         </div>
       </aside>
     </main>
