Add guestbook storage and portfolio updates

--- a/guest.html
+++ b/guest.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
@@ -19,6 +19,7 @@
         <a class="tab" href="notice.html">notice</a>
         <a class="tab" href="gallery.html">gallery</a>
         <a class="tab" href="work.html">work</a>
+        <a class="tab" href="game.html">game</a>
         <a class="tab is-active" href="guest.html">guest</a>
       </nav>
       <div class="status status--hidden">today 021 / total 10,248</div>
@@ -32,18 +33,15 @@
         </div>
         <ul class="profile-meta">
           <li>
-            <span class="name-chip">
-              <span class="icon-slot" aria-hidden="true"></span>
-              윤나 yoonna
-            </span>
+            <span class="name-chip">dago 다고</span>
           </li>
         </ul>
         <div class="sns-box">
           <div class="sns-title">sns</div>
           <ul class="sns-list">
             <li class="sns-item twitter">Twitter</li>
-            <li class="sns-item instagram">Instagram</li>
-            <li class="sns-item grafolio">Grafolio</li>
+            <li class="sns-item instagram"><a href="https://www.instagram.com/dagoda_99/" target="_blank" rel="noopener">Instagram</a></li>
+            <li class="sns-item grafolio"><a href="https://grafolio.ogq.me/profile/다고다/profile" target="_blank" rel="noopener">Grafolio</a></li>
           </ul>
           <div class="mail-line">MAIL : dagoda0503@gmail.com</div>
         </div>
@@ -84,7 +82,7 @@
             <input id="guest-name" class="guest-input" type="text" placeholder="이름" />
             <label class="sr-only" for="guest-msg">메시지</label>
             <textarea id="guest-msg" class="guest-textarea" rows="4" placeholder="메시지를 남겨주세요"></textarea>
-            <button class="guest-btn" type="button">등록</button>
+            <button class="guest-btn" type="submit">등록</button>
           </form>
           <div class="guest-list"></div>
         </div>
@@ -93,11 +91,17 @@
 
     <footer class="footer">
       <div class="footer-left">© 2026 PORTFOLIO</div>
-      <div class="footer-right">design · dev · story</div><div class="footer-copy">© 2026 yoonna. All rights reserved.</div></footer>
+      <div class="footer-right">design · dev · story</div><div class="footer-copy">© 2026 dago. All rights reserved.</div></footer>
   </div>
   <script src="script.js"></script>
 </body>
 </html>
+
+
+
+
+
+
 
 
 
