Rename site to dago portfolio

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="topbar">
       <div class="logo">
         <span class="logo-dot"></span>
-        <span class="logo-text">PORTFOLIO</span>
+        <span class="logo-text">dago portfolio</span>
       </div>
       <nav class="tabs" aria-label="메인 탭">
         <a class="tab is-active" href="index.html">home</a>
@@ -268,7 +268,7 @@
     </div>
 
     <footer class="footer">
-      <div class="footer-left">© 2026 PORTFOLIO</div>
+      <div class="footer-left">© 2026 dago portfolio</div>
       <div class="footer-right">design · dev · story</div><div class="footer-copy">© 2026 dago. All rights reserved.</div></footer>
   </div>
 
