--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
     <header class="topbar">
       <div class="logo">
         <span class="logo-dot"></span>
-        <span class="logo-text">PORTFOLIO</span>
+        <span class="logo-text">dago portfolio</span>
       </div>
       <nav class="tabs" aria-label="메인 탭">
         <a class="tab" href="index.html">home</a>
@@ -185,7 +185,7 @@
     </main>
 
     <footer class="footer">
-      <div class="footer-left">&copy; 2026 PORTFOLIO</div>
+      <div class="footer-left">&copy; 2026 dago portfolio</div>
       <div class="footer-right">design &middot; dev &middot; story</div>
     </footer>
     <div class="footer-copy">&copy; 2026 dago. All rights reserved.</div>
