Add work editor to admin

--- a/admin.html
+++ b/admin.html
@@ -95,6 +95,24 @@
       </section>
 
       <section class="admin-section">
+        <div class="section-title">work</div>
+        <div class="admin-grid">
+          <label>
+            공지 문구
+            <textarea data-work-field="notice" rows="3"></textarea>
+          </label>
+          <label>
+            진행 중 (줄바꿈)
+            <textarea data-work-field="active"></textarea>
+          </label>
+          <label>
+            예약 (줄바꿈)
+            <textarea data-work-field="reserved"></textarea>
+          </label>
+        </div>
+      </section>
+
+      <section class="admin-section">
         <div class="section-title">친구 배너</div>
         <div class="section-actions">
           <button type="button" data-action="add-friend">추가</button>
