--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="notice-head">
             <span class="notice-chip">notice</span>
           </div>
-          <span class="notice-text">홈페이지 공사중!</span>
+          <span class="notice-text">어서 오세요, 다고의 포트폴리오입니다.<br>방명록은 언제나 환영! 배너 교환은 메일로 남겨주세요.</span>
         </a>
         <section class="gallery" aria-label="갤러리">
           <a class="gallery-title" href="gallery.html">gallery</a>
@@ -114,11 +114,11 @@
             </button>
           </div>
         </section>
-        <section class="status-board" aria-label="work desk">
+        <section class="status-board" aria-label="work desk" data-work-board>
           <a class="status-title" href="work.html">work desk</a>
           <div class="status-group">
             <div class="status-label">진행 중</div>
-            <ul class="status-slots">
+            <ul class="status-slots" data-work-active>
               <li class="slot is-filled">포트폴리오 리뉴얼</li>
               <li class="slot">비어 있음</li>
               <li class="slot">비어 있음</li>
@@ -126,7 +126,7 @@
           </div>
           <div class="status-group">
             <div class="status-label">예약</div>
-            <ul class="status-slots">
+            <ul class="status-slots" data-work-reserved>
               <li class="slot">비어 있음</li>
               <li class="slot">비어 있음</li>
               <li class="slot">비어 있음</li>
