--- a/work.html
+++ b/work.html
@@ -79,13 +79,13 @@
           <div class="notice-head">
             <span class="notice-chip">work</span>
           </div>
-          <span class="notice-text">현재 진행 상황을 기록합니다.</span>
+          <span class="notice-text" data-work-notice>현재 진행 상황을 기록합니다.</span>
         </div>
-        <section class="status-board" aria-label="work desk">
+        <section class="status-board" aria-label="work desk" data-work-board>
           <div class="status-title">work desk</div>
           <div class="status-group">
             <div class="status-label">진행 중</div>
-            <ul class="status-slots">
+            <ul class="status-slots" data-work-active>
               <li class="slot is-filled">포트폴리오 리뉴얼</li>
               <li class="slot">비어 있음</li>
               <li class="slot">비어 있음</li>
@@ -93,7 +93,7 @@
           </div>
           <div class="status-group">
             <div class="status-label">예약</div>
-            <ul class="status-slots">
+            <ul class="status-slots" data-work-reserved>
               <li class="slot">비어 있음</li>
               <li class="slot">비어 있음</li>
               <li class="slot">비어 있음</li>
