Wire notices to data and tweak notice UI

--- a/notice.html
+++ b/notice.html
@@ -79,13 +79,9 @@
           <div class="notice-head">
             <span class="notice-chip">notice</span>
           </div>
-          <span class="notice-text">현재 홈페이지 공사 중입니다. 조금만 기다려주세요.</span>
+          <span class="notice-text">어서 오세요, 다고의 포트폴리오입니다. 방명록은 언제나 환영이에요.</span>
         </div>
-        <div class="notice-list">
-          <div class="notice-item">
-            <div class="notice-body">방명록도 자유롭게 남겨주세요.</div>
-          </div>
-        </div>
+        <div class="notice-list" data-notice-list></div>
       </section>
     </main>
 
