--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
         </div>
         <ul class="profile-meta">
           <li>
-            <span class="name-chip">dago 다고</span>
+            <div>
+              <span class="name-chip">dago 다고</span>
+              <div class="profile-bio">차분한 색감과 따뜻한 분위기를 좋아합니다.</div>
+            </div>
           </li>
         </ul>
         <div class="sns-box">
@@ -81,7 +84,7 @@
           <div class="notice-head">
             <span class="notice-chip">notice</span>
           </div>
-          <span class="notice-text">어서 오세요, 다고의 포트폴리오입니다.<br>방명록은 언제나 환영! 배너 교환은 메일로 남겨주세요.</span>
+          <span class="notice-text">어서 오세요, 다고의 포트폴리오입니다.<br>안내는 notice, 방명록은 guest, 샘플은 gallery에서 볼 수 있습니다.</span>
         </a>
         <section class="gallery" aria-label="갤러리">
           <a class="gallery-title" href="gallery.html">gallery</a>
@@ -156,6 +159,7 @@
             <a class="friend-item" href="#" rel="noopener">유진</a>
             <a class="friend-item" href="#" rel="noopener">하나</a>
           </div>
+          <div class="friend-note">배너 교환 문의는 메일로 남겨 주세요.</div>
         </div>
       </aside>
     </main>
