--- a/guest.html
+++ b/guest.html
@@ -33,7 +33,10 @@
         </div>
         <ul class="profile-meta">
           <li>
-            <span class="name-chip">dago 다고</span>
+            <div>
+              <span class="name-chip">dago 다고</span>
+              <div class="profile-bio">차분한 색감과 따뜻한 분위기를 좋아합니다.</div>
+            </div>
           </li>
         </ul>
         <div class="sns-box">
