--- a/notice.html
+++ b/notice.html
@@ -33,7 +33,10 @@
         </div>
         <ul class="profile-meta">
           <li>
-            <span class="name-chip">dago 다고</span>
+            <div>
+              <span class="name-chip">dago 다고</span>
+              <div class="profile-bio">차분한 색감과 따뜻한 분위기를 좋아합니다.</div>
+            </div>
           </li>
         </ul>
         <div class="sns-box">
@@ -79,9 +82,127 @@
           <div class="notice-head">
             <span class="notice-chip">notice</span>
           </div>
-          <span class="notice-text">어서 오세요, 다고의 포트폴리오입니다. 방명록은 언제나 환영이에요.</span>
+          <span class="notice-text">어서 오세요, 다고의 포트폴리오입니다.<br />방명록은 guest 페이지에서 작성하실 수 있습니다.</span>
         </div>
         <div class="notice-list" data-notice-list></div>
+
+        <section class="notice-guide" aria-label="상세 안내">
+          <div class="notice-guide__title">guide</div>
+          <p class="notice-guide__copy">아래 항목을 눌러 자세한 안내를 확인해 주세요.</p>
+
+          <details class="notice-accordion">
+            <summary>홈페이지</summary>
+            <div class="notice-accordion__body">
+              <ul>
+                <li>홈페이지 제작 관련 안내입니다.</li>
+                <li>현재는 홈페이지 제작을 받고 있지 않습니다.</li>
+                <li>필요한 경우 메일로 별도 문의해 주세요.</li>
+              </ul>
+            </div>
+          </details>
+
+          <details class="notice-accordion">
+            <summary>아이콘</summary>
+            <div class="notice-accordion__body">
+              <ul>
+                <li>아이콘은 개당 가격으로 책정됩니다.</li>
+                <li>번들 작업이 필요한 경우 필요한 아이콘 종류, 사용처, 메인 컬러, 콘셉트를 정확히 알려 주세요.</li>
+                <li>화려하거나 세밀한 묘사가 필요한 경우 추가금이 발생할 수 있습니다.</li>
+                <li>제작 기간은 1주일~1개월이며, 수량에 따라 변동됩니다.</li>
+              </ul>
+            </div>
+          </details>
+
+          <details class="notice-accordion">
+            <summary>개인 커미션</summary>
+            <div class="notice-accordion__body">
+              <details class="notice-subaccordion">
+                <summary>기본 안내</summary>
+                <div class="notice-subaccordion__body">
+                  <ul>
+                    <li>모든 저작권은 저에게 있으며, 활용 시 반드시 출처를 밝혀 주세요.</li>
+                    <li>선입금은 필수입니다.</li>
+                    <li>상업적 용도 사용은 불가합니다. 외주 작업은 메일로 문의해 주세요.</li>
+                    <li>단순 변심에 의한 환불 및 수정은 불가합니다.</li>
+                    <li>작업 기간을 초과할 경우 전액 환불해 드립니다.</li>
+                    <li>고어 / 성인물 / 퍼리 캐릭터는 작업하지 않습니다.</li>
+                    <li>작업물은 샘플 및 개인 포트폴리오에 사용될 수 있습니다.</li>
+                    <li>필요한 규격(크기)이 있다면 반드시 사전에 알려 주세요. (기본: 300px / iPhone X 사이즈)</li>
+                  </ul>
+                </div>
+              </details>
+
+              <details class="notice-subaccordion">
+                <summary>작업 기간 / 신청 양식</summary>
+                <div class="notice-subaccordion__body">
+                  <ul>
+                    <li>작업 기간: 기본 7일~1개월</li>
+                    <li>빠른 마감: +100% 추가금 (최소 2일 기준)</li>
+                    <li>신청 양식: 타입 / 캐릭터 정보(이미지 가능) / 인원 수(1인 또는 2인) / 원하는 자세</li>
+                    <li class="notice-line-branch">↳ A타입 동글이 / 캐릭터 정보(이미지 가능) / 1인 / 원하는 자세</li>
+                    <li class="notice-line-branch">↳ B타입 동글이 풀채색 / 캐릭터 정보(이미지 가능) / 2인 / 원하는 자세</li>
+                    <li>배경 없음: +0.3</li>
+                  </ul>
+                </div>
+              </details>
+
+              <details class="notice-subaccordion">
+                <summary>타입 안내</summary>
+                <div class="notice-subaccordion__body">
+                  <ul>
+                    <li><strong>풀채색</strong>: 머리부터 발끝까지 채색합니다.</li>
+                    <li><strong>포인트</strong>: 포인트만 컬러로 작업하고, 나머지는 흑백으로 작업합니다.</li>
+                    <li><strong>낙서</strong>: 가볍게 흑백 처리되며, 선 정리가 깔끔하지 않을 수 있습니다.</li>
+                    <li><strong>동글이</strong>: 동그랗게 크롭했을 때 귀엽게 보이도록 작업하며, 두상만 작업합니다.</li>
+                  </ul>
+                </div>
+              </details>
+
+              <details class="notice-subaccordion">
+                <summary>가격표 (A 타입 / SD)</summary>
+                <div class="notice-subaccordion__body">
+                  <ul>
+                    <li>SD 작업물은 동글이 타입을 제외하고 모두 전신만 가능합니다.</li>
+                    <li>풀채색</li>
+                    <li class="notice-line-branch">↳ 3.5</li>
+                    <li>포인트</li>
+                    <li class="notice-line-branch">↳ 2.0</li>
+                    <li>낙서</li>
+                    <li class="notice-line-branch">↳ 0.7</li>
+                    <li>동글이</li>
+                    <li class="notice-line-branch">↳ 1.0</li>
+                  </ul>
+                </div>
+              </details>
+
+              <details class="notice-subaccordion">
+                <summary>가격표 (B 타입 / LD)</summary>
+                <div class="notice-subaccordion__body">
+                  <ul>
+                    <li>현재 LD 풀채색은 받지 않습니다.</li>
+                    <li>포인트</li>
+                    <li class="notice-line-branch">↳ 전신 4.0 / 반신 2.5 / 두상 1.5</li>
+                    <li>낙서</li>
+                    <li class="notice-line-branch">↳ 전신 3.5 / 반신 2.0 / 두상 1.0</li>
+                    <li>동글이</li>
+                    <li class="notice-line-branch">↳ 풀채색 1.5 / 포인트 1.0</li>
+                  </ul>
+                </div>
+              </details>
+
+              <details class="notice-subaccordion">
+                <summary>추가 안내</summary>
+                <div class="notice-subaccordion__body">
+                  <ul>
+                    <li>복잡한 의상/액세서리의 경우 추가금이 발생할 수 있습니다.</li>
+                    <li>캐주얼 스타일 특성상 복잡한 디자인은 생략되거나 단순화될 수 있습니다.</li>
+                    <li>꼭 포함하고 싶은 포인트가 있다면 신청 시 명확하게 적어 주세요.</li>
+                  </ul>
+                </div>
+              </details>
+            </div>
+          </details>
+        </section>
       </section>
     </main>
 
