--- a/work.html
+++ b/work.html
@@ -33,7 +33,10 @@
         </div>
         <ul class="profile-meta">
           <li>
-            <span class="name-chip">dago 다고</span>
+            <div>
+              <span class="name-chip">dago 다고</span>
+              <div class="profile-bio">차분한 색감과 따뜻한 분위기를 좋아합니다.</div>
+            </div>
           </li>
         </ul>
         <div class="sns-box">
@@ -75,14 +78,9 @@
 
       <section class="panel canvas" aria-label="work">
         <div class="panel-title">work</div>
-        <div class="notice-strip">
-          <div class="notice-head">
-            <span class="notice-chip">work</span>
-          </div>
-          <span class="notice-text" data-work-notice>현재 진행 상황을 기록합니다.</span>
-        </div>
         <section class="status-board" aria-label="work desk" data-work-board>
           <div class="status-title">work desk</div>
+          <p class="status-summary" data-work-notice>현재 진행 상황을 기록합니다.</p>
           <div class="status-group">
             <div class="status-label">진행 중</div>
             <ul class="status-slots" data-work-active>
@@ -102,6 +100,7 @@
             </ul>
           </div>
         </section>
+
       </section>
     </main>
 
